feat(cockpit/searchParams): keep search parameters on view change
This commit adds the possibility to define which search parameters should
be kept if the user change view for example from "Runtime" to "History"
(and vice versa). Therefore it is possible to set the option
"keepSearchParams" to true or to assign an array of search parameters which
should be kept.

related to CAM-2003

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -7,7 +7,7 @@
   <tbody>
     <tr ng-repeat="calledProcessDefinition in calledProcessDefinitions">
       <td>
-        <a ng-href="#/process-definition/{{ calledProcessDefinition.id }}?parentProcessDefinitionId={{ processDefinition.id }}&amp;detailsTab=call-process-definitions-table">
+        <a ng-href="#/process-definition/{{ calledProcessDefinition.id }}?parentProcessDefinitionId={{ processDefinition.id }}">
           {{ calledProcessDefinition.name }}
         </a>
       </td>
