fix(cockpit/IE9): add min height to instance labels
fix CAM-2048

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -702,6 +702,11 @@ textarea.variable-type-string {
     line-height: 20px;
     height: 23px;
 
+    a {
+      display: inline-block;
+      min-height: 20px;
+    }
+
     .remove {
       display: none;
     }
