fix(webapp/cockpit): show cursor as pointer on instance tree
related to #CAM-2049

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -619,6 +619,10 @@ textarea.variable-type-string {
             box-sizing: border-box;         /* Opera/IE 8+ */
   }
 
+  a {
+    cursor: pointer;
+  }
+
   li {
     margin: 3px 0;
   }
