improve(styles): add styles on diagram rendering errors

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -370,6 +370,10 @@ a.expand-collapse {
 
 .dashboard-view {
   margin: 10px;
+
+  .diagram-rendering-error {
+    margin-top: 88px;
+  }
 }
 
 /** bootstrap tweaks */
