--- a/client/webapp/src/main/webapp/assets/styles/cockpit/tile-responsive.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/tile-responsive.less
@@ -28,6 +28,10 @@
   padding: 2px;
   height: 218px;
   min-width: inherit;
+
+  -webkit-box-sizing:border-box;
+     -moz-box-sizing:border-box;
+          box-sizing:border-box;
 }
 
 .tile-footer {
