--- a/client/webapp/src/main/webapp/assets/styles/common.less
+++ b/client/webapp/src/main/webapp/assets/styles/common.less
@@ -327,7 +327,6 @@ footer .version {
   }
 }
 
-/** end layout ui tweaks */
 
 .ctn-scroll::-webkit-scrollbar{width:8px;height:8px;}
 .ctn-scroll::-webkit-scrollbar-button:start:decrement,
@@ -335,6 +334,22 @@ footer .version {
 .ctn-scroll::-webkit-scrollbar-track-piece{background-color:#FAFAFA;-webkit-border-radius:0;-webkit-border-bottom-right-radius:3px;-webkit-border-bottom-left-radius:3px;}
 .ctn-scroll::-webkit-scrollbar-thumb:vertical{height:50px;background-color:#999;-webkit-border-radius:3px;}
 .ctn-scroll::-webkit-scrollbar-thumb:horizontal{width:50px;background-color:#999;-webkit-border-radius:3px;}
+
+/** end layout ui tweaks */
+
+/** bpmn rendering */
+
+.diagram-rendering-error {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  text-align: center;
+  max-width: 300px;
+}
+
+/** end bpmn rendering */
+
+
 
 /** input tweaks */
 
