fix(cockpit): coorect the baseUrl for require.js
This commit also corrects some paths to polyfills used for IE9 compatibility

Related to CAM-2091, CAM-2092

--- a/client/webapp/src/main/webapp/assets/styles/common.less
+++ b/client/webapp/src/main/webapp/assets/styles/common.less
@@ -425,6 +425,12 @@ footer .version {
 }
 
 
+// WHO NEED A FIX??????? IE of course!!!
+.form-signin input[tabindex="-1"][unselectable="on"][style] {
+  // take THAT in your face!
+  height: 30px !important;
+}
+
 /*
    Animation example, for spinners
 */
