refactor: frontend libraries upgrade
BREAKING CHANGE:
This commit upgrades the some frontend libraries like
- angular.js, now version 1.2.16
- bootstrap, now version 3.1.1, javascript is not used anymore

Due to significant changes in angular.js, you might need to make some changes
to your plugins as described in the migration guide:
http://docs.camunda.org/latest/guides/migration-guide/#migrate-from-camunda-bpm-71-to-72-migrate-cockpit-plugins

Related to CAM-2147, CAM-2157, CAM-2158, CAM-2159, CAM-2160, CAM-2160, CAM-2161, CAM-2162

--- a/client/webapp/src/main/webapp/assets/styles/_vars.less
+++ b/client/webapp/src/main/webapp/assets/styles/_vars.less
@@ -1,3 +1,6 @@
+@import "../vendor/bootstrap/less/variables";
+@import "../vendor/bootstrap/less/mixins";
+
 /********************************************************************\
  * Web interface customization variables                            *
  *                                                                  *
@@ -9,6 +12,7 @@
 
 // this is the "main" color (like in the header)
 @main-color:    #b5152b;
+@brand-primary: @main-color;
 
 // slightly darker variant
 // @main-darker: #9c3930;
@@ -41,3 +45,6 @@
 
 @logo-cockpit:  '../../img/cockpit/app-logo.png';
 
+// Logos -------------------------------------------------------------
+
+@fonts-path: '../fonts';
