--- a/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
@@ -5,14 +5,15 @@
     <!-- CAM-1098 -->
     <li class="dropdown"
         process-definition-select
-        help
-        help-text="Start a process instance"
-        help-placement="'bottom'"
+        tooltip="Start a process instance"
+        tooltip-placement="bottom"
         ng-show="processDefinitions.length"
         ng-controller="ProcessDefinitionsController"
         if-logged-in>
 
-      <a href class="dropdown-toggle" data-toggle="dropdown">
+      <a href
+         class="dropdown-toggle"
+         data-toggle="dropdown">
         <i class="icon-th-list icon-white"></i>
       </a>
 
@@ -27,8 +28,12 @@
 
     <li engine-select></li>
 
-    <li class="dropdown" if-logged-in>
-      <a href class="dropdown-toggle" sem-show-user-actions data-toggle="dropdown">
+    <li class="dropdown"
+        if-logged-in>
+      <a href
+         sem-show-user-actions
+         class="dropdown-toggle"
+         data-toggle="dropdown">
         <i class="icon-user icon-white"></i> {{ authentication.user.name }}
       </a>
 
@@ -50,7 +55,10 @@
     <li class="divider-vertical" if-logged-in></li>
 
     <li class="dropdown">
-      <a href class="dropdown-toggle" sem-show-apps data-toggle="dropdown">
+      <a href
+         sem-show-apps
+         class="dropdown-toggle"
+         data-toggle="dropdown">
         <i class="icon-home icon-white"></i>
       </a>
 
