--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/add-variable-action.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/add-variable-action.html
@@ -1,8 +1,7 @@
 <!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/add-variable-action.html -->
 <a class="btn btn-toolbar" href ng-click="openDialog()"
-   help
-   help-text="Add a new variable to Process Instance"
-   help-placement="'left'">
+   tooltip="Add a new variable to Process Instance"
+   tooltip-placement="left">
   <i class="icon-plus"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/add-variable-action.html -->
