--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/cancel-process-instance-action.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/cancel-process-instance-action.html
@@ -1,8 +1,7 @@
 <!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
 <a class="btn btn-toolbar" href ng-click="openDialog()"
-   help
-   help-text="Cancel running process instance"
-   help-placement="'left'">
+   tooltip="Cancel running process instance"
+   tooltip-placement="left">
   <i class="icon-remove-circle"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
