--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-bulk-action.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-bulk-action.html
@@ -1,8 +1,7 @@
 <!-- # CE - src/main/webapp/plugin/base/views/processInstance/job-retry-bulk-action.html -->
 <a class="btn btn-toolbar" href ng-click="openDialog()"
-   help
-   help-text="Increment Number of Retries of Failed Jobs"
-   help-placement="'left'">
+   tooltip="Increment Number of Retries of Failed Jobs"
+   tooltip-placement="left">
   <i class="icon-repeat"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/views/processInstance/job-retry-bulk-action.html -->
