--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-bulk-dialog.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-bulk-dialog.html
@@ -12,7 +12,10 @@
       <table class="table table-bordered table-hover table-condensed">
         <thead>
           <th class="row-select">
-            <input type="checkbox" title="Select all" ng-model="allJobsSelected" ng-click="selectAllJobs(allJobsSelected)">
+            <input type="checkbox"
+                   title="Select all"
+                   ng-model="allJobsSelected"
+                   ng-change="selectAllJobs(allJobsSelected)">
           </th>
           <th>ID</th>
           <th>Scope</th>
@@ -21,7 +24,9 @@
         <tbody>
           <tr ng-repeat="job in failedJobs">
             <td class="row-select">
-              <input type="checkbox" ng-model="job.selected" ng-click="selectFailedJob(job)">
+              <input type="checkbox"
+                     ng-model="job.selected"
+                     ng-change="selectFailedJob(job)">
             </td>
             <td>{{ job.id | shorten:8 }}</td>
             <td>{{ job.instance.name }}</td>
@@ -43,7 +48,18 @@
         </tbody>
       </table>
 
-      <div paginator total-pages="jobPages.total" current-page="jobPages.current"></div>
+
+      <pagination ng-if="jobPages.total > jobPages.size"
+                  class="pagination-sm"
+
+                  page="jobPages.current"
+                  ng-model="jobPages.current"
+
+                  total-items="jobPages.total"
+                  items-per-page="jobPages.size"
+
+                  max-size="7"
+                  boundary-links="true"></pagination>
     </fieldset>
   </form>
 
@@ -74,7 +90,18 @@
       </tbody>
     </table>
 
-    <div paginator total-pages="summarizePages.total" current-page="summarizePages.current"></div>
+
+    <pagination ng-if="summarizePages.total > summarizePages.size"
+                class="pagination-sm"
+
+                page="summarizePages.current"
+                ng-model="summarizePages.current"
+
+                total-items="summarizePages.total"
+                items-per-page="summarizePages.size"
+
+                max-size="7"
+                boundary-links="true"></pagination>
   </div>
 
 </div>
