--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-state-dialog.html
@@ -25,18 +25,16 @@
           <label class="control-label" for="includeJobsValue">Include Existing Jobs
             <!-- activation -->
             <span class="btn btn-small btn-link btn-control btn-control-link"
-                  help
-                  help-text="Including jobs means that all existing jobs of this job definition will be activated too, if the value is set to true."
-                  help-placement="'right'"
+                  tooltip="Including jobs means that all existing jobs of this job definition will be activated too, if the value is set to true."
+                  tooltip-placement="right"
                   ng-show="processDefinition.suspended">
               <i class="icon-question-sign"></i>
             </span>
 
             <!-- suspension -->
             <span class="btn btn-small btn-link btn-control btn-control-link"
-                  help
-                  help-text="Including jobs means that all existing jobs of this job definition will be suspended too, if the value is set to true."
-                  help-placement="'right'"
+                  tooltip="Including jobs means that all existing jobs of this job definition will be suspended too, if the value is set to true."
+                  tooltip-placement="right"
                   ng-hide="processDefinition.suspended">
               <i class="icon-question-sign"></i>
             </span>
@@ -49,16 +47,14 @@
         <div class="control-group">
           <label class="control-label" for="executeImmediately">Execute
             <span class="btn btn-small btn-link btn-control btn-control-link"
-                  help
-                  help-text="Decide whether the activation of this job definition should be executed immediately or delayed. If the activation should happen delayed then an execution date must be provided on which the activation will be scheduled."
-                  help-placement="'right'"
+                  tooltip="Decide whether the activation of this job definition should be executed immediately or delayed. If the activation should happen delayed then an execution date must be provided on which the activation will be scheduled."
+                  tooltip-placement="right"
                   ng-show="processDefinition.suspended">
               <i class="icon-question-sign"></i>
             </span>
             <span class="btn btn-small btn-link btn-control btn-control-link"
-                  help
-                  help-text="Decide whether the suspension of this job definition should be executed immediately or delayed. If the suspension should happen delayed then an execution date must be provided on which the suspension will be scheduled."
-                  help-placement="'right'"
+                  tooltip="Decide whether the suspension of this job definition should be executed immediately or delayed. If the suspension should happen delayed then an execution date must be provided on which the suspension will be scheduled."
+                  tooltip-placement="right"
                   ng-hide="processDefinition.suspended">
               <i class="icon-question-sign"></i>
             </span>
