--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/suspension-state-action.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/suspension-state-action.html
@@ -1,12 +1,10 @@
 <a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-show="jobDefinition.suspended"
-   help
-   help-text="Activate Job Definition"
-   help-placement="'left'">
+   tooltip="Activate Job Definition"
+   tooltip-placement="left">
   <i class="icon-play"></i>
 </a>
 <a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-hide="jobDefinition.suspended"
-   help
-   help-text="Suspend Job Definition"
-   help-placement="'left'">
+   tooltip="Suspend Job Definition"
+   tooltip-placement="left">
   <i class="icon-suspended"></i>
 </a>
