refactor: frontend libraries upgrade
BREAKING CHANGE:
This commit upgrades the some frontend libraries like
- angular.js, now version 1.2.16
- bootstrap, now version 3.1.1, javascript is not used anymore

Due to significant changes in angular.js, you might need to make some changes
to your plugins as described in the migration guide:
http://docs.camunda.org/latest/guides/migration-guide/#migrate-from-camunda-bpm-71-to-72-migrate-cockpit-plugins

Related to CAM-2147, CAM-2157, CAM-2158, CAM-2159, CAM-2160, CAM-2160, CAM-2161, CAM-2162

--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/app/admin/templates/navigation.html -->
 <div class="nav-collapse collapse navbar-responsive-collapse" ng-cloak>
   <ul class="nav ng-scope" ng-controller="NavigationController" if-logged-in>
 
@@ -21,8 +22,11 @@
 
     <li engine-select></li>
 
-    <li class="dropdown" if-logged-in>
-      <a href class="dropdown-toggle" data-toggle="dropdown">
+    <li class="dropdown"
+        if-logged-in>
+      <a href
+         class="dropdown-toggle"
+         data-toggle="dropdown">
         <i class="icon-user icon-white"></i> {{ authentication.user.name }}
       </a>
 
@@ -44,7 +48,9 @@
     <li class="divider-vertical" if-logged-in></li>
 
     <li class="dropdown">
-      <a href class="dropdown-toggle" data-toggle="dropdown">
+      <a href
+         class="dropdown-toggle"
+         data-toggle="dropdown">
         <i class="icon-home icon-white"></i>
       </a>
 
@@ -59,3 +65,4 @@
     </li>
   </ul>
 </div>
+<!-- / CE - src/main/webapp/app/admin/templates/authorizations.html -->
