--- a/client/webapp/src/main/webapp/assets/styles/cockpit/loader.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/loader.less
@@ -6,56 +6,56 @@
 // @import "../_fonts.less";
 
 
-// Reset
-@import "../../vendor/bootstrap/less/normalize.less";
-@import "../../vendor/bootstrap/less/print.less";
+// // Reset
+// @import "../../vendor/bootstrap/less/normalize.less";
+// @import "../../vendor/bootstrap/less/print.less";
 
-// Core CSS
-@import "../../vendor/bootstrap/less/scaffolding.less";
-@import "../../vendor/bootstrap/less/type.less";
-// @import "../../vendor/bootstrap/less/code.less";
-@import "../../vendor/bootstrap/less/grid.less";
-@import "../../vendor/bootstrap/less/tables.less";
-@import "../../vendor/bootstrap/less/forms.less";
-@import "../../vendor/bootstrap/less/buttons.less";
+// // Core CSS
+// @import "../../vendor/bootstrap/less/scaffolding.less";
+// @import "../../vendor/bootstrap/less/type.less";
+// // @import "../../vendor/bootstrap/less/code.less";
+// @import "../../vendor/bootstrap/less/grid.less";
+// @import "../../vendor/bootstrap/less/tables.less";
+// @import "../../vendor/bootstrap/less/forms.less";
+// @import "../../vendor/bootstrap/less/buttons.less";
 
-// Components
-@import "../../vendor/bootstrap/less/component-animations.less";
-@import "../../vendor/bootstrap/less/glyphicons.less";
-@import "../../vendor/bootstrap/less/dropdowns.less";
-@import "../../vendor/bootstrap/less/button-groups.less";
-@import "../../vendor/bootstrap/less/input-groups.less";
-@import "../../vendor/bootstrap/less/navs.less";
-@import "../../vendor/bootstrap/less/navbar.less";
-@import "../../vendor/bootstrap/less/breadcrumbs.less";
-@import "../../vendor/bootstrap/less/pagination.less";
-@import "../../vendor/bootstrap/less/pager.less";
-@import "../../vendor/bootstrap/less/labels.less";
-@import "../../vendor/bootstrap/less/badges.less";
-// @import "../../vendor/bootstrap/less/jumbotron.less";
-// @import "../../vendor/bootstrap/less/thumbnails.less";
-@import "../../vendor/bootstrap/less/alerts.less";
-@import "../../vendor/bootstrap/less/progress-bars.less";
-@import "../../vendor/bootstrap/less/media.less";
-@import "../../vendor/bootstrap/less/list-group.less";
-// @import "../../vendor/bootstrap/less/panels.less";
-// @import "../../vendor/bootstrap/less/wells.less";
-// @import "../../vendor/bootstrap/less/close.less";
+// // Components
+// @import "../../vendor/bootstrap/less/component-animations.less";
+// @import "../../vendor/bootstrap/less/glyphicons.less";
+// @import "../../vendor/bootstrap/less/dropdowns.less";
+// @import "../../vendor/bootstrap/less/button-groups.less";
+// @import "../../vendor/bootstrap/less/input-groups.less";
+// @import "../../vendor/bootstrap/less/navs.less";
+// @import "../../vendor/bootstrap/less/navbar.less";
+// @import "../../vendor/bootstrap/less/breadcrumbs.less";
+// @import "../../vendor/bootstrap/less/pagination.less";
+// @import "../../vendor/bootstrap/less/pager.less";
+// @import "../../vendor/bootstrap/less/labels.less";
+// @import "../../vendor/bootstrap/less/badges.less";
+// // @import "../../vendor/bootstrap/less/jumbotron.less";
+// // @import "../../vendor/bootstrap/less/thumbnails.less";
+// @import "../../vendor/bootstrap/less/alerts.less";
+// @import "../../vendor/bootstrap/less/progress-bars.less";
+// @import "../../vendor/bootstrap/less/media.less";
+// @import "../../vendor/bootstrap/less/list-group.less";
+// // @import "../../vendor/bootstrap/less/panels.less";
+// // @import "../../vendor/bootstrap/less/wells.less";
+// // @import "../../vendor/bootstrap/less/close.less";
 
-// Components w/ JavaScript
-@import "../../vendor/bootstrap/less/modals.less";
-@import "../../vendor/bootstrap/less/tooltip.less";
-@import "../../vendor/bootstrap/less/popovers.less";
-// @import "../../vendor/bootstrap/less/carousel.less";
+// // Components w/ JavaScript
+// @import "../../vendor/bootstrap/less/modals.less";
+// @import "../../vendor/bootstrap/less/tooltip.less";
+// @import "../../vendor/bootstrap/less/popovers.less";
+// // @import "../../vendor/bootstrap/less/carousel.less";
 
-// Utility classes
-@import "../../vendor/bootstrap/less/utilities.less";
-// @import "../../vendor/bootstrap/less/responsive-utilities.less";
+// // Utility classes
+// @import "../../vendor/bootstrap/less/utilities.less";
+// // @import "../../vendor/bootstrap/less/responsive-utilities.less";
 
 
-// @import "../bootstrap.patched.less";
-// // @import "../bootstrap-responsive.less";
-// @import "../../vendor/bootstrap-slider/slider.css";
+@import "../bootstrap.patched.less";
+// @import "../bootstrap-responsive.less";
+@import "../../vendor/bootstrap-slider/slider.css";
 
 
 @import "../common.less";
@@ -63,5 +63,5 @@
 @import "app.less";
 
 @import "pages/dashboard.less";
-@import "pages/process-definition.less";
-@import "pages/process-instance.less";
+// @import "pages/process-definition.less";
+// @import "pages/process-instance.less";
