fix(pagers): correct pagers styling

--- a/client/webapp/src/main/webapp/assets/styles/_vars.less
+++ b/client/webapp/src/main/webapp/assets/styles/_vars.less
@@ -48,3 +48,8 @@
 // Logos -------------------------------------------------------------
 
 @fonts-path: '../fonts';
+
+// bootstrap overrides -----------------------------------------------
+// bootstrap pagination ----------------------------------------------
+@pagination-active-bg: @gray-light;
+@pagination-active-border: @gray-light;
