--- a/client/webapp/src/main/webapp/assets/styles/cockpit/loader.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/loader.less
@@ -28,8 +28,8 @@
 // @import "../../vendor/bootstrap/less/navs.less";
 // @import "../../vendor/bootstrap/less/navbar.less";
 // @import "../../vendor/bootstrap/less/breadcrumbs.less";
-// @import "../../vendor/bootstrap/less/pagination.less";
-// @import "../../vendor/bootstrap/less/pager.less";
+@import "../../vendor/bootstrap/less/pagination.less";
+@import "../../vendor/bootstrap/less/pager.less";
 // @import "../../vendor/bootstrap/less/labels.less";
 // @import "../../vendor/bootstrap/less/badges.less";
 // // @import "../../vendor/bootstrap/less/jumbotron.less";
@@ -55,8 +55,6 @@
 
 @import "../bootstrap.patched.less";
 // @import "../bootstrap-responsive.less";
-@import "../../vendor/bootstrap-slider/slider.css";
-
 
 @import "../common.less";
 
